<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ListViewCorreoElectronico"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/imageViewIcono"
        android:layout_width="58dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/imageViewIcono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtAsuntoMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="256dp"
        android:paddingBottom="8dp"
        android:text="@string/txtAsuntoMensaje"
        android:textColor="#494646"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageViewIcono"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreRemitente"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtCuerpoMensaje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:maxLength="50"
        android:maxLines="2"
        android:minLines="2"
        android:paddingBottom="8dp"
        android:text="@string/txtCuerpoMensaje"
        android:textAlignment="viewStart"
        android:textColor="#555252"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageViewIcono"
        app:layout_constraintTop_toBottomOf="@+id/txtAsuntoMensaje"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtNombreRemitente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingBottom="8dp"
        android:text="@string/txtNombreRemitente"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewIcono"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>