<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleCorreo">

    <TextView
        android:id="@+id/txtRemitenteDetalleCorreo"
        android:layout_width="384dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:text="@string/txtRemitenteDetalleCorreo"
        android:textColor="#0E0E0E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAsuntoDetalleCorreo"
        android:layout_width="384dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:text="@string/txtAsuntoDetalleCorreo"
        android:textColor="#151414"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRemitenteDetalleCorreo" />

    <TextView
        android:id="@+id/txtCuerpoMensajeDetalleCorreo"
        android:layout_width="367dp"
        android:layout_height="524dp"
        android:layout_marginStart="16dp"
        android:padding="8sp"
        android:text="@string/txtCuerpoMensajeDetalleCorreo"
        android:textAlignment="viewStart"
        android:textColor="#1B1919"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAsuntoDetalleCorreo"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>